--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             {start: 311, end: 314, "text": "The stewards are deliberating, and the tension is through the roof!"},
             {start: 315, end: 319, "text": "Ladies and gentlemen, we don’t have the final results yet."},
             {start: 320, end: 324, "text": "The skyline will rest tonight, but we’re left wondering—who’s qualified, and who will take home the ultimate prize?"},
-            {start: 325, end: 326, "text": "Stay tuned!"}
+            {start: 325, end: 326, "text": "Stay tuned!"},
         	{start: 327, end: 345, "text": "AM I QUALIFIED TO JOIN?"}
         ];
 
