--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     </style>
 </head>
 <body>
-    <img src="image.jpg" alt="Urban Gauntlet Grand Prix">
+    <img src="race.jpg" alt="Megapore Grand Prix">
     <audio id="audio" autoplay>
-        <source src="audio.mp3" type="audio/mpeg">
+        <source src="Poutrox_reis.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
     <div id="text"></div>
