--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body>
     <img src="race.jpg" alt="Megapore Grand Prix">
     <audio id="audio" autoplay>
-        <source src="Poutrox_reis.mp3" type="audio/mpeg">
+        <source src="Poutrix_reis.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
     <div id="text"></div>
