--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 </head>
 <body>
     <img src="race.jpg" alt="Megapore Grand Prix">
-    <audio id="audio" autoplay>
+    <audio autoplay controls>
         <source src="Poutrix_reis.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
-    <div id="text"></div>
+    <div id="text">Listening...</div>
     <script>
         // Example text data with timestamps
         const textData = [
