--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <script>
         // Example text data with timestamps
         const textData = [
-            {start: 0, end: 4, "text": "Welcome, ladies and gentlemen, to the grand spectacle that is the Megapore Grand Prix!"},
+            {start: 0, end: 4, "text": "Welcome, ladies and gentlemen, to the grand spectacle that is the Magapore Grand Prix!"},
             {start: 5, end: 12, "text": "Tonight, in the heart of Magapore, the fusion of cutting-edge architecture and engineering ingenuity, we witness a race like no other."},
             {start: 13, end: 19, "text": "Forget turbocharged race cars: this event showcases the raw determination of engineers and builders."},
             {start: 20, end: 27, "text": "Some are sprinting on foot in steel-toe boots, others are behind the wheels of bulldozers, forklifts, and even a dredging vessel."},
